--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,9 +1,9 @@
 version: "2"
 sql:
   - engine: "sqlite"
-    queries: "db/queries"
-    schema: "db/migrations"
+    queries: "db/sql/queries"
+    schema: "db/sql/migrations"
     gen:
       go:
-        package: "db"
-        out: "db"
+        package: "gen"
+        out: "db/gen"
